basic-crud-developed

--- a/App/appsettings.json
+++ b/App/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "sqliteConnString": "Data Source=E:\\TI\\DotNET\\Frameworks\\Dapper\\Projetos\\dapper-api-project\\webapi-controller-dapper-project\\App\\Database\\Application.db;Cache=Shared"
+  },
   "AllowedHosts": "*"
 }
